Chang dragonfly-p2p-webhook to dragonfly-injector
Signed-off-by: suiyuan <thetallestlc@qq.com>

--- a/config/certmanager/issuer.yaml
+++ b/config/certmanager/issuer.yaml
@@ -5,7 +5,7 @@ apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   labels:
-    app.kubernetes.io/name: dragonfly-p2p-webhook
+    app.kubernetes.io/name: dragonfly-injector
     app.kubernetes.io/managed-by: kustomize
   name: selfsigned-issuer
   namespace: system
