--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,5 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: d7y.io/dragonfly-p2p-webhook
+  newName: d7y.io/dragonfly-injector
   newTag: v0.0.1
