--- a/config/rbac/service_account.yaml
+++ b/config/rbac/service_account.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   labels:
-    app.kubernetes.io/name: dragonfly-p2p-webhook
+    app.kubernetes.io/name: dragonfly-injector
     app.kubernetes.io/managed-by: kustomize
   name: controller-manager
   namespace: system
