--- a/config/webhook/service.yaml
+++ b/config/webhook/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app.kubernetes.io/name: dragonfly-p2p-webhook
+    app.kubernetes.io/name: dragonfly-injector
     app.kubernetes.io/managed-by: kustomize
   name: webhook-service
   namespace: system
@@ -13,4 +13,4 @@ spec:
       targetPort: 9443
   selector:
     control-plane: controller-manager
-    app.kubernetes.io/name: dragonfly-p2p-webhook
+    app.kubernetes.io/name: dragonfly-injector
