Change cli-tools to toolkits
Signed-off-by: suiyuan <thetallestlc@qq.com>

--- a/config/webhook/config-map.yaml
+++ b/config/webhook/config-map.yaml
@@ -6,6 +6,6 @@ data:
   config.yaml: |
     enable: true
     proxy_port: 4001
-    cli_tools_image: dragonflyoss/cli-tools:latest
+    cli_tools_image: dragonflyoss/toolkits:latest
     cli_tools_dir_path: /dragonfly-tools
 
