Modify README and webhook config
Signed-off-by: suiyuan <thetallestlc@qq.com>

--- a/config/webhook/config-map.yaml
+++ b/config/webhook/config-map.yaml
@@ -4,8 +4,8 @@ metadata:
   name: "inject-config"
 data:
   config.yaml: |
-    enable: true
-    proxy_port: 4001
-    cli_tools_image: dragonflyoss/toolkits:latest
-    cli_tools_dir_path: /dragonfly-tools
+    enable: true       # Whether to enable injection
+    proxy_port: 4001   # The proxy port of Dragonfly Dfdaemon
+    cli_tools_image: dragonflyoss/toolkits:latest # The image used for injection
+    cli_tools_dir_path: /dragonfly-tools          # The tools directory path in the image
 
